--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>Node Girls CMS tutorial</title>
+    <link rel="stylesheet" type="text/css" href="public/main.css">
 </head>
 
 <body>
@@ -21,7 +22,7 @@
         aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
         occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
     </p>
-    <img src="./img/image.jpg">
+    <img src="./public/img/image.jpg">
 
     <h3>Create a blog post</h3>
     <form action="/create-post" method="POST">
